foi alterado a foto e a cor azul

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ a {
 
 /* Variaveis Globais*/
 :root {
-    --color-destaque: #2a5fff;
+    --color-destaque: #0084ff;
     --color-black: #101010;
     --color-white: #fafafa;
 }
